add video function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,9 @@ cmake_minimum_required(VERSION 3.1.0)
 set(PRO_NAME video_algorithm_ncnn_qt)
 
 project(${PRO_NAME})
-
+# list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 # 在相应的构建目录中查找头文件
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
 
 # 设置CMake在需要时自动运行moc
 set(CMAKE_AUTOMOC ON)
@@ -15,18 +15,34 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 
 # 设置Qt的环境变量
-#list(APPEND CMAKE_PREFIX_PATH /home/azmddy/Qt/5.12.0/gcc_64)
+# list(APPEND CMAKE_PREFIX_PATH "~/Qt5.9.0/5.9/gcc_64/lib/cmake")
+# set(Qt5Multimedia_DIR  "~/Qt5.9.0/5.9/gcc_64/lib/cmake/Qt5Multimedia")
+# set(Qt5MultimediaWidgets_DIR  "~/Qt5.9.0/5.9/gcc_64/lib/cmake/Qt5MultimediaWidgets")
 
 # 搜索当前目录下的源文件
 aux_source_directory(./src DIR_SRCS)
+aux_source_directory(./ui DIR_UIS)
+# 寻找Qt5的库   
 
-# 寻找Qt5的库
-find_package(Qt5 COMPONENTS Widgets REQUIRED)
+
+find_package(Qt5 COMPONENTS Widgets Core   REQUIRED)
+find_package(OpenCV REQUIRED)
+
+
+# include(ui2header)
+# ui2header(DIR_SRCS ${DIR_UIS})
+# message(${DIR_SRCS})
+
+
+include_directories(
+        ${OpenCV_INCLUDE_DIRS}
+        )
+
 
 # 设置可执行文件
-add_executable(${PRO_NAME} ${DIR_SRCS})
+add_executable(${PRO_NAME} ${DIR_SRCS} ${DIR_WRAP})
 
 # 链接Qt5的库
-target_link_libraries(${PRO_NAME} Qt5::Widgets)
-
-add_subdirectory(ncnn)
+target_link_libraries(${PRO_NAME} ${OpenCV_LIBS} Qt5::Widgets  )
+#Qt5::Core Qt5::Multimedia Qt5::MultimediaWidgets
+#Multimedia MultimediaWidgets
